--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,6 @@ body {
     font-family: "Barlow", sans-serif;
     color: var(--body);
     line-height: 1.7;
-    overflow-x: hidden;
 }
 
 h1,h2,h3,h4,h5,h6,
@@ -34,7 +33,7 @@ img {
 .logo{
     width: 200px !important;
     height: 70px !important;
-
+  
 }
 
 a {
@@ -54,6 +53,42 @@ section {
 
 .text-brand {
     color: var(--brand) !important;
+}
+
+
+ /* for desktop */
+ .whatsapp_float {
+    position: fixed;
+    width: 60px;
+    height: 60px;
+    bottom: 40px;
+    right: 40px;
+    background-color: #25d366;
+    color: #FFF;
+    border-radius: 50px;
+    text-align: center;
+    font-size: 30px;
+    box-shadow: 2px 2px 3px #999;
+    z-index: 100;
+}
+
+.whatsapp-icon {
+    margin-top: 16px;
+}
+
+/* for mobile */
+@media screen and (max-width: 767px) {
+    .whatsapp-icon {
+        margin-top: 10px;
+    }
+
+    .whatsapp_float {
+        width: 40px;
+        height: 40px;
+        bottom: 20px;
+        right: 10px;
+        font-size: 22px;
+    }
 }
 
   
