--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,7 @@ body {
     font-family: "Barlow", sans-serif;
     color: var(--body);
     line-height: 1.7;
+    width: 100%;
 }
 
 h1,h2,h3,h4,h5,h6,
