--- a/src/Components/Carousel/Carousel.css
+++ b/src/Components/Carousel/Carousel.css
@@ -34,3 +34,15 @@
     text-transform: uppercase;
 }
 
+@media(max-width:500px){
+    .height{
+        height: 200px;
+        width: 100%;
+        object-fit: cover;
+    }
+    .display-5{
+        padding-top: 160px !important;
+        font-size: 20px;
+        /* font-size: 1.2rem !important; */
+    }
+}
